no-jira: mute icons in authoring table, prevent wrap in sortable header columns

--- a/src/main/webapp/static/themes/light/modules/_coursesite.scss
+++ b/src/main/webapp/static/themes/light/modules/_coursesite.scss
@@ -256,10 +256,10 @@
 			white-space: nowrap;
 		}
 		.o_repoentry_type {
-			color: $gray;
+			color: $text-muted;
 		}
 		.o_repoentry_ac {
-			color: $gray;
+			color: $text-muted;
 			ul {
 				display: inline-block;
 			}
